--- a/docs/pages/frontEnd/js基础/跨域通信.md
+++ b/docs/pages/frontEnd/js基础/跨域通信.md
@@ -38,7 +38,7 @@ http://juejin.com:4000
 ### 同源策略
 同源策略是**浏览器**针对不同源之间的一套安全策略，用于限制不同源之间的一些非安全操作。
 
-### DOM层面
+#### DOM层面
 首先，我们来看看同源之间如何操作DOM
 
 我们打开掘金首页（a页面），然后随便点一篇文章（b页面）进入，此时a页面与b页面同源。在b页面的控制台执行如下代码：
@@ -52,14 +52,14 @@ pdom.body.style.display = "none"
 ![](https://tva1.sinaimg.cn/large/00831rSTgy1gd2pxsxwqnj318804kt9n.jpg)
 这就是**同源策略限制不能获取非同源页面的DOM节点**。
 
-### 数据层面：Cookie、IndexDB、LocalStorage等
+#### 数据层面：Cookie、IndexDB、LocalStorage等
 **同源策略限制不同源之间不能相互读取Cookie、IndexDB、LocalStorage等数据**。
 展开刚刚在b页面控制台打印的opener(a页面的Window)，可以看到里面还有很多数据（包括Cookie、IndexDB、LocalStorage）
 ![](https://tva1.sinaimg.cn/large/00831rSTgy1gd2q3oib77j30vi0oygsi.jpg)
 
 但是展开c页面控制台打印的opener(a页面的Window)，会发现没有这些信息，也就不谈获取和操作了。
 
-### 网络层面
+#### 网络层面
 **同源策略限制不同源之间不同进行Ajax通信**。
 
 ## 跨域通信
@@ -101,6 +101,7 @@ xhr.send(null)
 
 意思就是，来自于origin为null的ajax请求被CORS策略阻拦了，也就是不满足同源策略，被拒绝了。
 > 本地file页面的跨域请求Origin头为null
+
 下面我们就来看看在同源策略的限制下，如何顺利的实现跨域通信。
 ### JSONP
 #### JSONP原理
@@ -218,16 +219,62 @@ Access-Control-Allow-Credentials: true
 Access-Control-Expose-Headers: FooBar
 Content-Type: text/html; charset=utf-8
 ```
+#### Access-Control-Allow-Origin
+该字段是必须的，表示被允许的源。该字段只能被设为3个值：*、null和请求时的origin的值
+* ”*“表示任何源都被允许
+* "null"表示origin为null被允许。当直接通过本地file页面进行跨域请求时，origin为空。
+* 请求时的origin，代表origin在白名单里，服务端直接返回此origin值，代表此origin被允许
+#### Access-Control-Allow-Credentials
+该字段可选，表示是否允许携带Cookie。该字段只有一个值：true，若不允许则直接不传该字段。
 
-则服务器会带上CORS头信息返回响应（），浏览器发现有CORS则知道被允许了，按正常响应处理；若没有CORS信息，则抛出错误。
-### 复杂请求
-#### 预检请求
-先预检请求options：带上origin，Access-Control-Request-Method，Access-Control-Request-Headers
-服务端收到预检请求，检查以上字段后，若允许则带上CORS的相关头信息作出回应；若拒绝，则返回一个普通的http，没有CORS信息。浏览器接收到后，发现没有CORS则会认为服务器不同意，便出发一个错误，最终通过控制台打印出来。
-#### 正常请求
-通过预检请求后，浏览器会进行正常的请求，此时就会和一个简单请求一样，带上origin字段，服务器会返回
-### 验证
+此响应头若要生效，需要客户端配合。开发者必须在Ajax请求中将withCredentials属性设为true，浏览器才会发送Cookie，否则即使服务端同意Cookie发送，浏览器也不会带上Cookie。
+
+同时要注意，CORS是对Ajax通信有效，Cookie依然会遵守同源策略的限制，只有用服务器域名设置的Cookie才会上传，其他域名的Cookie并不会上传。
 ```js
+var xhr = new XMLHttpRequest();
+xhr.withCredentials = true;
+```
+
+当`Access-Control-Allow-Credentials`为true时，表示客户端可以再请求时带上Cookie。
+#### Access-Control-Expose-Headers
+该字段可选。`XMLHttpRequest`的`getResponseHeader()`方法只能拿到如下6个基本字段：
+```
+Cache-Control、Content-Language、Content-Type、Expires、Last-Modified、Pragma
+```
+如果想要获取其他header字段，则必须要Access-Control-Expose-Headers指定的才可以拿到。
+
+### 非简单请求
+非简单请求的CORS请求，浏览器会在正式通信前，先发送一个预检请求，预检请求通过后，才会继续发送正常的请求。
+#### 1、预检请求
+预检请求，就是在发送正式请求前，先去问下服务器，当前网页的源是否在服务器的白名单里，以及有哪些可使用的方法和表头等信息。只有服务器通过预检请求，浏览器才会发起正常请求。
+
+预检请求采用`OPTIONS`方法。`OPTIONS`请求会带上如下首部：
+* origin字段，该字段必须。由于是用于询问当前网页的源是否被允许，因此一定会带上origin字段。
+
+* Access-Control-Request-Method字段，该字段必须。用于说明当前请求会用到的方法。
+
+* Access-Control-Request-Headers字段，该字段可选。该字段值时一个用逗号分隔的字符串，用于说明CORS请求会额外发送的header。
+
+服务器收到预检请求后，检查以上3个字段。
+
+**如果服务器拒绝了此次预检请求**，则会返回一个正常的HTTP响应。浏览器收到响应后，发现没有包含任何CORS相关头信息，则判定服务器拒绝了此次请求，会抛出一个错误，被XMLHttpRequest对象的onerror回调函数捕获。同时，浏览器便不会继续后续的正常请求了。
+
+**如果服务器允许了此次预检请求**，则会在HTTP响应中加入CORS相关的头信息字段。
+* `Access-Control-Allow-Origin`字段，该字段必须。该字段被设置为请求头里的origin，表示允许此origin的访问（当然也可以设置为*，表示所有源都被允许）。
+
+* `Access-Control-Allow-Methods`字段，该字段必须。该字段为一个以逗号分隔的字符串，包含服务端可支持的所有方法。注意，不是仅包含当前访问的方法。
+
+* `Access-Control-Allow-Headers`字段，该字段与请求中的`Access-Control-Request-Headers`字段对应。如果请求包含了`Access-Control-Request-Headers`字段，则该字段必须。该字段也是一个以逗号分隔的字符串，包含了服务器支持的所有头信息字段，不限于浏览器在"预检"中请求的字段。
+
+* `Access-Control-Allow-Credentials`字段，该字段同简单请求
+
+* `Access-Control-Max-Age`字段，该字段可选。用于指定本次预检请求的有效期单位为秒。也就是说该预检请求的响应会被缓存，在此该值指定的时间内，再访问同一个服务端域名时，直接通过此缓存判断请求是否被允许即可，不需要再发送另一次预检请求。
+
+#### 2、正常请求
+通过预检请求后，浏览器会进行正常的请求，就和一个简单请求一样。
+### CORS实践
+```js
+// 服务端server.js
 let express = require('express')
 let app = express()
 let whitList = ['null'] //设置白名单
@@ -290,14 +337,42 @@ xhr.send(null)
 ```
 在浏览器的network，我们可以看到在PUT方法前，先发送了一个OPTIONS请求。
 ![](https://tva1.sinaimg.cn/large/00831rSTgy1gd1n3pmftwj30ol094abq.jpg)
-> 若在浏览器看不到OPTIONS请求，则通过以下步骤可以看到OPTIONS方法：
-> 1、新标签页输入`chrome://flags/#out-of-blink-cors`
-> 2、将Out of blink CORS设置为disabled
+> 若在浏览器看不到OPTIONS请求，则通过以下步骤可以看到OPTIONS方法：</br>
+> 1、新标签页输入`chrome://flags/#out-of-blink-cors`</br>
+> 2、将Out of blink CORS设置为disabled</br>
 > 3、重启chrome
 
 ## postMessage
+postMessage能主要是实现多窗口间的跨域通信。只要一个origin窗口可以获得对另一个target窗口的引用targetWindow，然后通过`targetWindow.postMessage`向targetWindow发送消息，同时可监听targetWindow发来的消息
+```js
+targetWindow.postMessage(message, targetOrigin)
+originWindow.onmessage = function (e) {
+    console.log(e.data) // targetWindow发来的消息
+}
+```
+targetWindow在接收到消息后，可恢复originWindow消息
+```js
+targetWindow.onmessage = function(e) {
+    console.log(e.data) // originWindow发来的消息
+    e.source.postMessage(message, e.origin) // 通过e.source获取发送方的window对象originWindow
+ }
+```
+根据以上，说明下需要注意的几个点
+* 发送方必须要先可以获取到接收方window的引用（比如内嵌iframe的contentWindow属性、执行window.open返回的窗口对象、或者是命名过或数值索引的window.frames）
+
+* `window.postMessage`里的window是**接收方的window**
+
+* 接收方无法主动给发送方发消息，必须在接收到发送方的消息后，才能通过`e.source`给发送方发送消息，因此此时才能拿到发送方的window，也就是`e.source`
+> 更多详细的postMessage相关规范和使用后续再另起文章整理。可参考文章[HTML5 跨域通信 API - window.postMessage()](https://github.com/Monine/monine.github.io/issues/2)和[MDN](https://developer.mozilla.org/zh-CN/docs/Web/API/Window/postMessage)
+
 ## websocket
+
 ## node中间件代理
+### 实现原理
+同源策略是浏览器的限制，如果**两个不同源的服务器相互请求是不受同源策略限制**的。因此，只需要在客户端和服务器中间，加一个与客户端同源的服务器（或者具有对其设置CORS权限的服务器），中转请求就可以实现客户端和服务器之间不同源的访问。
+
+![](https://tva1.sinaimg.cn/large/00831rSTgy1gd3vmcftj3j30go06ljs0.jpg)
+
 在本地开发时，需要跨域访问服务器的接口，若采用webpack的devServer.proxy的方案，其原理就是node中间件代理
 ```
 proxy: {
@@ -306,47 +381,8 @@ proxy: {
     }
 }
 ```
-设置target为目标服务器地址，当本地发起ajax请求时，请求会被发到localhost上，localhost直接与浏览器交互，其Access-Control-Allow-Origin为*；然后localhost将请求转换给`your-api-server:port`，接收到响应后再转发给浏览器。
-若服务器上
+设置target为目标服务器地址，当本地发起ajax请求时，请求是从localhost发出的，请求被代理服务器localhost接收，此时浏览器与代理服务器同域，因此可以顺利访问；然后代理服务器将请求转发给`http://your-api-server:port`，此时是两个服务器通信，不存在同源策略的限制，因此也可以顺利访问。
 
-
-参考：https://www.cnblogs.com/qianguyihao/p/8523576.html
-https://www.ruanyifeng.com/blog/2016/04/cors.html
-
-## 疑问
-本地访问dev，是如何跨域的
-
-## 笔记
-### Jsonp
-* 飞猪的购物车是jsonp请求淘宝的
-* 
-
-
-
-
-//-----------cookie---------
-跨域，cookie和安全
-* cookie 
-https://juejin.im/post/5e718ecc6fb9a07cda098c2d#heading-1
-https://www.zhihu.com/question/373011996
-
-跨域
-* https://juejin.im/post/5e6c58b06fb9a07ce01a4199#heading-1
-* https://segmentfault.com/a/1190000011145364
-
-
-
-
-## 云服务器相关
-### 步骤
-* 登录：按[官方教程](https://cloud.tencent.com/document/product/213/2936)
-* node.js环境部署https://cloud.tencent.com/document/product/213/38236
-### 上传文件
-[官方教程](https://cloud.tencent.com/document/product/213/39138)
-* 在服务器上pwd查看服务器的当前目录
-* 上传文件到服务器：在自己电脑上，
-* 从服务器下载文件：在自己电脑上，
-* 删除服务器上的文件
-
-### 相关可参考教程
-[【重学Node.js 第5篇】部署项目到腾讯云服务器](https://juejin.im/post/5dfaec9ce51d45584968813e)
+## 参考：
+* [跨域总结:从CORS到Ngnix](https://juejin.im/post/5e6c58b06fb9a07ce01a4199#heading-11)
+* [跨域资源共享 CORS 详解](https://www.ruanyifeng.com/blog/2016/04/cors.html)
