一些原来的博客

--- a/docs/pages/frontEnd/js基础/跨域通信.md
+++ b/docs/pages/frontEnd/js基础/跨域通信.md
@@ -60,7 +60,7 @@ pdom.body.style.display = "none"
 但是展开c页面控制台打印的opener(a页面的Window)，会发现没有这些信息，也就不谈获取和操作了。
 
 #### 网络层面
-**同源策略限制不同源之间不同进行Ajax通信**。
+**同源策略限制不同源之间不能进行Ajax通信**。
 
 ## 跨域通信
 同源策略虽然可以实现web页面的安全性，但在某些场景下，同时也带来了不便。因此在某些特定场景下，我们需要请求不同源之间的资源，因此我们要想办法实现跨域通信。
@@ -382,6 +382,11 @@ proxy: {
 }
 ```
 设置target为目标服务器地址，当本地发起ajax请求时，请求是从localhost发出的，请求被代理服务器localhost接收，此时浏览器与代理服务器同域，因此可以顺利访问；然后代理服务器将请求转发给`http://your-api-server:port`，此时是两个服务器通信，不存在同源策略的限制，因此也可以顺利访问。
+## nginx反向代理
+原理与node中间件代理类似，都是通过中间代理服务器中转请求。假设A源要访问B源服务器
+思路：通过nginx配置一个代理服务器，与A页面同源，反向代理到B源。这样A页面发请求时，直接向代理服务器（源为A）发起，请求会被转发给B，从而实现跨域。
+> 更多详细后续再另其文章整理。
+
 
 ## 参考：
 * [跨域总结:从CORS到Ngnix](https://juejin.im/post/5e6c58b06fb9a07ce01a4199#heading-11)
