二叉树部分

--- a/docs/pages/ algorithm/基础介绍/二分查找.md
+++ b/docs/pages/ algorithm/基础介绍/二分查找.md
@@ -1,2 +1,22 @@
 ### 思想
 二分查找，针对的是一个**有序的数据**集合，查找思想有点类似分治思想。每次都通过跟区间的中间元素对比，将待查找的区间缩小为之前的一半，直到找到要查找的元素，或者区间被缩小为 0。
+
+一般会用3个指针来实现，low和high表示当前要查找的数据范围，mid表示中间位置
+
+### 容易出错的3个地方
+#### 1、循环退出条件
+#### 2、mid的取值
+#### 3、low和high的更新
+
+### 应用场景
+* 必须为顺序表结构，其实就是数组
+不能为其他数据结构，比如链表。因为二分查找的主要思想要依赖随机访问，数组随机访问的复杂度为O(1)，而链表为O(n)，如果用链表则时间复杂度为很高
+
+* 必须为有序数据
+如果数据无序，需要先排序
+
+* 数据量太小不适合二分查找
+数据量太小直接用顺序遍历就足够，没有必要用二分查找
+
+* 数据量太大不适合二分查找
+因为二分查找需要采用数组存储，而数组采用连续空间，因此数据量太大的话就无法申请到一个连续空间
