--- a/docs/pages/frontEnd/js基础/作用域链.md
+++ b/docs/pages/frontEnd/js基础/作用域链.md
@@ -64,6 +64,7 @@ function bar () {
 bar()
 ```
 ![](https://tva1.sinaimg.cn/large/006tNbRwgy1gb1mxunli4j30gm07c3zv.jpg)
+
 可以看到，scope的最上层是Local，也就是当前执行上下文的变量对象，下面就是函数的[[scope]]属性里保存的父级层级链。点击Call Stack中的函数，还可以切换当前执行上下文，观察下面scope的变化。
 ### 整体流程
 讲了变量对象和作用域，最后我们整体梳理下函数执行时发生了什么，整体流程是怎样的。
@@ -106,7 +107,7 @@ barContext = {
     Scope: bar.[[scope]],
 }
 ```
-* 将活动对象AO压如作用域链顶端
+* 将活动对象AO压入作用域链顶端
 ```js
 barContext = {
     AO: {
