--- a/docs/pages/frontEnd/js基础/变量对象.md
+++ b/docs/pages/frontEnd/js基础/变量对象.md
@@ -12,6 +12,7 @@
 * 变量 (var, 变量声明);
 * 函数声明 (FunctionDeclaration, 缩写为FD);
 * 函数的形参(仅在函数执行上下文中存在)
+
 全局上下文和函数上下文中的变量对象有些不同，因此以下分开讨论。
 
 ## 浏览器控制台查看VO
@@ -27,7 +28,8 @@
 
 全局对象在初始阶段就将Math、String、Date、parseInt等属性作为自身属性初始化，同样在全局作用域创建的所有变量或方法，也就是我们通常称为的全局对象或全局方法，也都是全局对象的属性。
 > 区别全局对象和window
-window只是Global在浏览器环境下的一种体现，也就是在浏览器中`Global === window`，但不能混淆这2个概念。比如在Node.js中，Global仍然存在，但不等于window了。
+>
+>window只是Global在浏览器环境下的一种体现，也就是在浏览器中`Global === window`，但不能混淆这2个概念。比如在Node.js中，Global仍然存在，但不等于window了。
 
 ### 全局上下文中的VO
 通过以上对全局上下文的解释，我们可以知道，全局上下文中的变量对象就是Global。即
@@ -64,12 +66,15 @@ bar(1)
 除了形参和arguments的差异，全局上下文和函数上下文的变量对象的变化过程都是一样的，因此下面统一讨论。
 ### 进入执行上下文
 在进入执行上下文时，变量对象VO已经包含了如下属性
-* 函数形参（仅存在与函数执行上下文）
+* 函数形参（仅存在于函数执行上下文）
+
 由名称和对应值组成的一个变量对象的属性被创建；没有传递对应参数的话，那么由名称和undefined值组成的一种变量对象的属性也将被创建。
 * 函数声明
+
 由名称和对应值（函数对象(function-object)）组成一个变量对象的属性被创建；如果变量对象已经存在相同名称的属性，则完全替换这个属性
 * 变量声明
-— 由名称和对应值（undefined）组成一个变量对象的属性被创建；**如果变量名称跟已经声明的形式参数或函数相同，则变量声明不会干扰已经存在的这类属性。**
+
+由名称和对应值（undefined）组成一个变量对象的属性被创建；**如果变量名称跟已经声明的形式参数或函数相同，则变量声明不会干扰已经存在的这类属性。**
 
 还是上面那段代码，在第二个debugger处查看函数的变量对象
 > 说明：除了形参和arguments，其他变量在全局环境中观察也是一样的，只是Global中太多自身属性，要找到我们定义的变量比较麻烦，因此就在函数中观察，但结果可扩展到全局上下文中。
