--- a/docs/pages/frontEnd/js基础/柯里化.md
+++ b/docs/pages/frontEnd/js基础/柯里化.md
@@ -1,7 +1,7 @@
 ## 什么是函数柯里化
-在[维基百科](https://zh.wikipedia.org/wiki/%E6%9F%AF%E9%87%8C%E5%8C%96)中，柯里化的定义是：在计算机科学中，柯里化（英语：Currying），又译为卡瑞化或加里化，是把接受多个参数的函数变换成接受一个单一参数（最初函数的第一个参数）的函数，并且返回接受余下的参数而且返回结果的新函数的技术。
+在[维基百科](https://zh.wikipedia.org/wiki/%E6%9F%AF%E9%87%8C%E5%8C%96)中，柯里化的定义是：在计算机科学中，柯里化（英语：Currying），又译为卡瑞化或加里化，是把接受多个参数的函数变换成接受一个单一参数（最初函数的第一个参数）的函数，并且返回接受余下的参数的新函数的技术。
 
-听起来有些绕，用式子表达就是：能将一个调用形式为f(a, b, c)的函数转化调用形式为f_curry(a)(b)(c)的技术。
+听起来有些绕，用式子表达就是：能将一个调用形式为`f(a, b, c)`的函数转化调用形式为`f_curry(a)(b)(c)`的技术。
 比如
 ```js
 function add(a, b) {
@@ -60,16 +60,16 @@ checkEmail('test@gmail.com'); // 校验邮箱
 ```
 这样对于不同的正则类型，我们都有了专门的函数，简单又明了。
 
-柯里化的这种用途可以被称为：参数复用。本质上，它是降低了原函数（checkByRegExp）的通用性，实现适用性（checkCellPhone）的提升。
+柯里化的这种用途可以被称为：参数复用。本质上，它是降低了原函数checkByRegExp的通用性，实现适用性checkCellPhone的提升。
 
 > 以上的将checkByRegExp转为checkByRegExp_curry的过程是函数柯里化，而checkCellPhone和checkEmail实际上是**偏函数的应用**——创造了一个新函数，同时将部分参数替换成特定值。不过我觉得没必要一定要严格区分，柯里化技术的一部分本来也是会返回一个偏函数（后面的实现会讲到）
 
 ## 函数柯里化的实现
 
-我们先来明确下我们的问题：我们要实现函数createCurry，它能实现createCurry(f)的结果为f_curry，其中f的调用方式为f(a, b, c)，f_curry的调用方式为f_curry(a)(b)(c)。
+我们先来明确下我们的问题：我们要实现函数createCurry，它能实现`createCurry(f)`的结果为f_curry，其中f的调用方式为`f(a, b, c)`，f_curry的调用方式为`f_curry(a)(b)(c)`。
 
-* createCurry的传参是一个函数（f），返回结果也是一个函数（f_curry）
-* 返回的这个函数（f_curry），当参数个数少于原函数（f）时，它会返回一个函数（f_curry(a)、f_curry(a)(b)），当参数个数等于原函数个数时，返回原函数的执行结果。
+* createCurry的传参是一个函数f，返回结果也是一个函数f_curry
+* 返回的这个函数f_curry，当参数个数少于原函数f时，它会返回一个函数`f_curry(a)`、`f_curry(a)(b)`，当参数个数等于原函数个数时，返回原函数的执行结果。
 
 根据以上2点，我们可以写出：
 ```js
@@ -87,7 +87,7 @@ function createCurry (f) {
     return f_curry
     }
 ```
-那当参数个数少于原函数的时候，return的是一个怎样的函数呢？我们看看f_curry(a)、f_curry(a)(b)，是不是其实就是createCurry(f, a)和createCurry(createCurry(f, a), b)，因此我们可以发现，这其实是一个递归调用的过程，当参数不够时，就继续返回createCurry(f, args)。
+那当参数个数少于原函数的时候，return的是一个怎样的函数呢？我们看看`f_curry(a)`、`f_curry(a)(b)`，是不是其实就是`createCurry(f, a)`和`createCurry(createCurry(f, a), b)`，因此我们可以发现，这其实是一个递归调用的过程，当参数不够时，就继续返回`createCurry(f, args)`。
 于是补充参数不够时的返回：
 ```js
 function createCurry (f, arr) {
@@ -114,8 +114,11 @@ console.log(f_curry(1)(2)(3))
 ```
 这里我们已经实现了函数柯里化，我们再来一步步看看每步都发生了什么，以便更好的理解
 * `const f_curry = createCurry(f)`，初始化fLength为3， 返回f_curry
+
 * `f_curry(1)`， param为1，args为[1]，fLength为3大于arg.length，因此执行`return createCurry.call(this, f, args)`，最终返回一个可以访问到args为[1]的闭包函数f_curry
+
 * `f_curry(1)(2)`，同上，param为2，args为[1, 2]，fLength为3大于arg.length，因此执行`return createCurry.call(this, f, args)`，最终返回一个可以访问到args为[1, 2]的闭包函数f_curry
+
 * `f_curry(1)(2)(3)`，param为2，args为[1, 2, 3]，fLength为3等于arg.length，因此执行`f.apply(this, args)`，进入f函数， 最终返回结果6
 
 到这里我们其实已经实现了函数柯里化，不过我们还可以再优化下。目前的createCurry的到的f_curry，无法实现f_curry(1, 2)(3)，我们稍微改进下，让它的自由度更高。
