--- a/docs/pages/ algorithm/排序/冒泡排序.md
+++ b/docs/pages/ algorithm/排序/冒泡排序.md
@@ -2,7 +2,7 @@
 function bubbleSort (arr) {
 	const length = arr.length
 	for (let i = 0; i< length; i++) {
-		for (let j = 0; j< length - i; j++) {
+		for (let j = 0; j< length - i - 1; j++) {
 			if (arr[j] > arr[j+1]) {
 				let temp = arr[j]
 				arr[j] = arr[j+1]
