一些未整理的笔记

--- a/docs/pages/ algorithm/二分查找/704-二分查找.md
+++ b/docs/pages/ algorithm/二分查找/704-二分查找.md
@@ -9,7 +9,7 @@ var search = function(nums, target) {
     const length = nums.length
     let low = 0
     let high = length - 1
-    while (low <high ) {
+    while (low <= high ) {
         let mid = Math.floor((low + high) / 2)
         if (nums[mid] === target) {
             return mid
@@ -38,7 +38,7 @@ var search = function(nums, target) {
     return -1
 };
 ```
-```
+```js
 // 递归方案（正确写法）
 function bSearch (low, high, nums, target) {
     if (low > high) return -1 // 找不到时的结束条件
