--- a/docs/pages/ algorithm/二叉树/144-前序遍历.md
+++ b/docs/pages/ algorithm/二叉树/144-前序遍历.md
@@ -27,12 +27,8 @@ var preorderTraversal = function(root) {
     while(stack.length) {
         const cur = stack.pop()
         out.push(cur.val)
-        if(cur.right !== null) {
-            stack.push(cur.right)
-        }
-        if(cur.left !== null) {
-            stack.push(cur.left)
-        }
+        cur.right && stack.push(cur.right)
+        cur.left &&  stack.push(cur.left)
     }
     return out
 }
