--- a/docs/pages/ algorithm/二叉树/94-中序遍历.md
+++ b/docs/pages/ algorithm/二叉树/94-中序遍历.md
@@ -39,7 +39,7 @@ var inorderTraversal = function(root) {
 ```
 
 ### 思路分析-迭代方案
-* 每遍历一个节点，就沿着树把左节点全部入栈，知道cur为null；然后逐个pop，pop的节点为node，node即为此时目标节点，push至list，并将cur设为node.right，重复上述步骤
+* 每遍历一个节点，就沿着树把左节点全部入栈，直到cur为null；然后逐个pop，pop的节点为node，node即为此时目标节点，push至list，并将cur设为node.right，重复上述步骤
 
 * 注意，结束条件是`stack.length || cur !== null`，当stack为空时，弹出的最后一个node可能还有right，因此需要结合`stack.length`和`cur !== null`
 ### 复杂度分析
