--- a/docs/pages/ algorithm/排序/归并排序.md
+++ b/docs/pages/ algorithm/排序/归并排序.md
@@ -26,6 +26,7 @@ function mergeSort (arr) {
 		while (j <= high) {
 			newArr.push(arr[j++])
 		}
+		// 将已排序的新数组传给旧数组
 		for (let m = low; m <= high; m++) {
 			// 注意是m <= high，不是m < high
 			arr[m] = newArr[m - low]
