--- a/docs/pages/ algorithm/排序/快速排序.md
+++ b/docs/pages/ algorithm/排序/快速排序.md
@@ -5,6 +5,7 @@
 ![](https://tva1.sinaimg.cn/large/00831rSTgy1gdme76xhmfj30vq0nv76l.jpg)
 ```js
 function quickSort (arr) {
+    if (arr.length <= 1) return
     quickSort_c(arr, 0, arr.length - 1)
 }
 function quickSort_c (arr, low, high) {
@@ -17,7 +18,7 @@ function partion (arr, low, high) {
     let pivot = arr[high] // 选择最后一个元素为基准元素
     let i = low // i在循环过程中，一直是比pivot大的元素和比pivot小的元素的分界线
     for (let j = low; j < high; j++) { // j为普通的循环变量，要循环low到high-1，基准点pivot可以不用遍历
-        if (arr[j] < pivot) {
+        if (arr[j] < pivot) { // 如果是从大到小，则直接改变为>即可
             swap(arr, i, j)
             i++
         }
