--- a/docs/pages/frontEnd/js基础/执行上下文栈.md
+++ b/docs/pages/frontEnd/js基础/执行上下文栈.md
@@ -2,7 +2,7 @@
 js的很多不太好理解的概念，比如作用域、this、闭包，可以说都与执行上下文有关，弄懂了执行上下文，再去理解这些概念就没有难度了。
 
 ## 可执行代码
-但js每执行一段可执行代码，就会进入一个执行上下文；js的可执行代码有3种：
+当js每执行一段可执行代码，就会进入一个执行上下文；js的可执行代码有3种：
 * 全局代码
 * 函数代码
 * eval代码
