--- a/docs/pages/frontEnd/js基础/草-防抖与节流.md
+++ b/docs/pages/frontEnd/js基础/草-防抖与节流.md
@@ -51,8 +51,12 @@ function throttle (cb, delay) {
 	return function (...args) {
 		let cur = new Date()
 		let remaining = delay - (cur - start)
-        // 【注意一，要不要等号？？】
-		if (remaining < 0) { //用于第一次触发时执行
+		if (remaining <= 0) { //用于第一次触发时执行
+			// 此时有可能有一个已经到时间的timer，为避免重复执行，需要将timer设为null
+			if (timer) {
+				clearTimerout(timer)
+				timer = null
+			}
 			cb.apply(this, args)
 			start = cur
 		} else if (!timer){ // 之后每次都会走这儿，这样最后一次也会被执行
