--- a/docs/pages/other/草-组件开发.md
+++ b/docs/pages/other/草-组件开发.md
@@ -11,7 +11,46 @@
 ### 周边属性
 * 样式、所需资源等文件就近存放，保持为一个整体（组件资源由自身加载控制）
 * 样式只写本身样式，不要写与定位有关的类似样式（定位交给外部写）
-* 
+
+### demo-loading
+```js
+import LoadingImg from './LoadingImg'
+export default {
+  install (Vue) {
+    let $Loading = null
+    Vue.prototype.$loading = (options = {}) => {
+      const { text, delay } = options
+      return new Promise(resolve => {
+        $Loading = new Vue({
+          render: h => h(LoadingImg, {
+            props: {
+              text
+            }
+          })
+        }).$mount().$el
+        document.body.appendChild($Loading)
+        if (typeof delay === 'number') {
+          let timer = setTimeout(() => {
+            document.body.removeChild($Loading)
+            clearTimeout(timer)
+            timer = null
+            resolve()
+          }, delay)
+        } else {
+          resolve()
+        }
+      })
+    }
+    Vue.prototype.$loading.close = () => {
+      if ($Loading) {
+        document.body.removeChild($Loading)
+        $Loading = null
+      }
+    }
+  }
+}
+
+```
 
 相关
 * https://juejin.im/post/5d566e82f265da03f77e653c#heading-10
