--- a/docs/pages/ algorithm/链表/141-环形链表.md
+++ b/docs/pages/ algorithm/链表/141-环形链表.md
@@ -1,4 +1,4 @@
-[141-链表的中间节点](https://leetcode-cn.com/problems/linked-list-cycle/)
+[141-环形链表](https://leetcode-cn.com/problems/linked-list-cycle/)
 
 ## 题解
 
