--- a/docs/pages/ algorithm/链表/206-反转单链表.md
+++ b/docs/pages/ algorithm/链表/206-反转单链表.md
@@ -5,17 +5,31 @@
 ### 代码
 ```js
 // 迭代方案
-let cur = head
-let prev = null
-let next = null
-while (cur !== null) {
-    next = cur.next // 找到下一个节点
-    cur.next = prev // 反转当前节点
-    // 将本次数据转为旧数据，准备进入下一次循环
-    prev = cur // 当前节点转为旧数据
-    cur = next // 获取新节点（下一个节点）作为下一次循环的当前节点
+var reverseList = function(head) {
+    let cur = head
+    let prev = null
+    let next = null
+    while (cur !== null) {
+        next = cur.next // 找到下一个节点
+        cur.next = prev // 反转当前节点
+        // 将本次数据转为旧数据，准备进入下一次循环
+        prev = cur // 当前节点转为旧数据
+        cur = next // 获取新节点（下一个节点）作为下一次循环的当前节点
+    }
+    return prev
 }
-return prev
+```
+
+```js
+// 递归方案
+var reverseList = function(head) {
+    if (head === null || head.next === null) return head
+    let p = reverseList(head.next)
+    head.next.next = head
+    head.next = null
+    return p
+};
+
 ```
 
 ### 思路分析
@@ -30,6 +44,8 @@ return prev
 * 以`fast === slow`结束的情况就是有环，以`fast === null || fast.next === null`就是没有环；所以可以用任一条件作为循环条件，另一条件在内部判断即可
 
 * 由于提前将fast设为了`fast = head.next.next`，所以需要判断`head === null || head.next === null`的情况下范围false
+
+
 
 ### 复杂度分析
 #### 时间复杂度
