--- a/docs/pages/frontEnd/js基础/闭包.md
+++ b/docs/pages/frontEnd/js基础/闭包.md
@@ -133,3 +133,7 @@ console.log(funcList[2]())
 写完有种感觉，闭包真是一个即使理解了也不太容易用文字讲述清楚的东西，有点只可意会不可言传的意思。
 
 另外，在文中，大家会发现我一会说闭包是一个函数，一会说是一个变量集合。其实，这就和文章开头所说的一样，不用刻意定义闭包是什么，准确来说它是一种使用场景，但至于这个场景里哪部分是闭包，没有深究的必要。
+
+<!-- // TODO
+对闭包的存储做下分析（在进入外部函数时首先会编译，编译过程中发现内部函数引用了外部函数的变量，此时就会将变量放入堆中，这样当外部函数结束时，内部函数也依然能访问到外部函数中的变量）
+https://time.geekbang.org/column/article/129596 -->
