暂时注释柯里化相关

--- a/docs/pages/frontEnd/js基础/柯里化.md
+++ b/docs/pages/frontEnd/js基础/柯里化.md
@@ -126,9 +126,9 @@ console.log(f_curry(1)(2)(3))
 function createCurry (f, arr) {
     let args = arr || []
     const fLength = f.length
-    const f_curry = function () {
-        const innerArgs = Array.prototype.slice.call(arguments) // 将类数组转为数组
-        args = args.concat(innerArgs) //
+    const f_curry = function (...params) {
+        // const innerArgs = Array.prototype.slice.call(arguments) // 将类数组转为数组
+        args = args.concat(params) //
         if ( fLength > args.length ) {
             return createCurry.call(this, f, args)
         } else {
@@ -145,6 +145,98 @@ console.log(f_curry(1, 2)(3))// 6
 console.log(f_curry(1)(2, 3))// 6
 console.log(f_curry(1, 2, 3))// 6
 ```
+## 实现无限相加
+
+### 题型
+有一道很经典的题目：实现一个sum函数，具有如下功能(参数可以无限个)。
+
+* 题型一：
+```js
+sum(1)(2)() // 3
+sum(1)(2, 3)() // 6
+sum(1, 2, 3, 4)() // 10
+...
+```
+* 题型二：
+```js
+sum(1)(2).valueOf() // 3
+sum(1)(2, 3).valueOf() // 6
+sum(1, 2, 3, 4).valueOf() // 10
+...
+```
+* 题型三：
+```js
+sum(1)(2) // 3
+sum(1)(2, 3) // 6
+sum(1, 2, 3, 4) // 10
+...
+```
+以上三种题型要实现的功能基本是一样的，也就是实现一个累加函数sum，传参的形式可以任意组合。三种题型的差别就在于最终进行运算的方式不一样，分别是() 、valueOf和直接运算。
+
+
+### 题解
+这道题与以上我们分析的柯里化的不同是：sum的参数个数不确定。因此，我们不能再用`fLength > args.length`这个条件来判断是继续收集参数还是计算结果，而三种题型的差异也就是在这：如何结束参数收集而计算结果。
+
+首先，因为参数个数不确定，我们改造下f函数
+```js
+// 参数个数确定时
+function f (a, b, c) {
+    return a + b + c
+}
+// 参数个数不确定时
+function f (...args) {
+    return args.reduce((prev, next) => prev + next, 0)
+}
+```
+ 
+####  题解一
+题型一是以()来结束参数收集。仔细想想，sum(2)和sum(2)()的差别，我们可以发现**结束收集参数的条件就是传参数为0**。
+```js{6}
+function createCurry (f, arr) {
+    let args = arr || []
+    const f_curry = function (...params) {
+        args = args.concat(params) //
+        if ( params.length ) {
+            return createCurry.call(this, f, args)
+        } else {
+            return f.apply(this, args)
+        }
+    }
+    return f_curry
+}
+```
+测试下
+```js
+sum(1)(2)() // 3
+sum(1)(2, 3)() // 6
+sum(1, 2, 3, 4)() // 10
+```
+
+#### 题解二
+题型二是以一个方法valueOf来结束收集。那也就是结束收集参数的条件很明白的告诉我们了：**执行valueOf方法时结束收集参数**。
+```js{7,8,9}
+function createCurry (f, arr) {
+    let args = arr || []
+    const f_curry = function (...params) {
+        args = args.concat(params)
+        return createCurry.call(this, f, args)
+    }
+    f_curry.valueOf = function () {
+        return f.apply(this, args)
+    }
+    return f_curry
+}
+```
+测试下
+```js
+sum(1)(2).valueOf() // 3
+sum(1)(2, 3).valueOf() // 6
+sum(1, 2, 3, 4).valueOf() // 10
+...
+```
+
+
+
 
 
 参考：
