一些算法题

--- a/docs/pages/frontEnd/js基础/防抖与节流.md
+++ b/docs/pages/frontEnd/js基础/防抖与节流.md
@@ -13,7 +13,7 @@ function debounce (cb, delay) {
 	}
 }
 ```
-要注意理解此处的this，是指向当前正在监听的元素
+要注意理解此处的this，是指向当前正在监听的元素。以下是具体使用场景和用法（节流也类似）
 ```js
 // 使用一：如果不带参数，则
 div.addEventListener('scroll',debounce(realFunc, 300));
@@ -104,3 +104,20 @@ function throttle (cb, delay) {
 * **first + 3ms**——    此时`remaining = 3 - (3 - 0) = 0 <= 0`，进入`remaining <= 0`，此时`first + 3ms`时刻的timer可能还存在，为防止回调函数执行两次，此处就clearTimerout(timer)，并将timer置为空；执行一次回调，start置为first + 3ms。
 
 * **first + 4ms**——    此时重复`first + 1ms`的过程...
+### requestAnimationFrame版本
+在代码中使用requestAnimationFrame，就是告诉浏览器希望执行一个动画，让浏览器在下一个动画帧安排一次网页重绘。
+采用requestAnimationFrame实现的节流函数，不能指定间隔时间，间隔时间为显示器刷新一次的时间，一般为1/60s
+```js
+function throttle (cb) {
+	let ticking = false
+	return function (...args) {
+		if(!ticking) {
+			ticking = true
+			requestAnimationFrame(function () {
+				cb.apply(this, args)
+				ticking = false
+			})
+		}
+	}
+}
+```
