--- a/docs/pages/frontEnd/js基础/柯里化.md
+++ b/docs/pages/frontEnd/js基础/柯里化.md
@@ -74,9 +74,9 @@ checkEmail('test@gmail.com'); // 校验邮箱
 根据以上2点，我们可以写出：
 ```js
 function createCurry (f) {
-    let args = []
     const fLength = f.length
     const f_curry = function (param) {
+        let args = []
         args.push(param)
         if ( fLength > args.length ) {
             // return 一个函数
@@ -90,11 +90,10 @@ function createCurry (f) {
 那当参数个数少于原函数的时候，return的是一个怎样的函数呢？我们看看`f_curry(a)`、`f_curry(a)(b)`，是不是其实就是`createCurry(f, a)`和`createCurry(createCurry(f, a), b)`，因此我们可以发现，这其实是一个递归调用的过程，当参数不够时，就继续返回`createCurry(f, args)`。
 于是补充参数不够时的返回：
 ```js
-function createCurry (f, arr) {
-    let args = arr || []
+function createCurry (f, arr = []) {
     const fLength = f.length
     const f_curry = function (param) {
-        args.push(param)
+        let args = [...arr, param]
         if ( fLength > args.length ) {
             return createCurry.call(this, f, args)
         } else {
@@ -123,12 +122,10 @@ console.log(f_curry(1)(2)(3))
 
 到这里我们其实已经实现了函数柯里化，不过我们还可以再优化下。目前的createCurry的到的f_curry，无法实现f_curry(1, 2)(3)，我们稍微改进下，让它的自由度更高。
 ```js
-function createCurry (f, arr) {
-    let args = arr || []
+function createCurry (f, arr = []) {
     const fLength = f.length
     const f_curry = function (...params) {
-        // const innerArgs = Array.prototype.slice.call(arguments) // 将类数组转为数组
-        args = args.concat(params) //
+        let args = [...arr,...params];
         if ( fLength > args.length ) {
             return createCurry.call(this, f, args)
         } else {
@@ -137,6 +134,41 @@ function createCurry (f, arr) {
     }
     return f_curry
 }
+```
+<!-- // TODO 注意以下两种，
+
+```js
+// 在外层函数保存参数arr，用_args(一个不是arr也不是args的变量)保存，则可以正常连续输出
+function createCurry (f, arr = []) {
+    const fLength = f.length
+    let _args = arr || []// 注意要用一个新变量
+    const f_curry = function (...params) {
+        let args = [..._args,...params];// 注意
+        if ( fLength > args.length ) {
+            return createCurry.call(this, f, args)
+        } else {
+            return f.apply(this, args)
+        }
+    }
+    return f_curry
+}
+```
+```js
+// 但是如果用args或者arr保存，则都会出错
+function createCurry (f, arr = []) {
+    const fLength = f.length
+    let args = arr || [] // 注意
+    // let arr = arr || []
+    const f_curry = function (...params) {
+        args = [...args,...params];// 注意
+        if ( fLength > args.length ) {
+            return createCurry.call(this, f, args)
+        } else {
+            return f.apply(this, args)
+        }
+    }
+    return f_curry
+} -->
 ```
 验证下
 ```js
@@ -191,51 +223,94 @@ function f (...args) {
  
 ####  题解一
 题型一是以()来结束参数收集。仔细想想，sum(2)和sum(2)()的差别，我们可以发现**结束收集参数的条件就是传参数为0**。
-```js{6}
-function createCurry (f, arr) {
-    let args = arr || []
-    const f_curry = function (...params) {
-        args = args.concat(params) //
-        if ( params.length ) {
-            return createCurry.call(this, f, args)
+```js
+function sum (...arr) {
+    let args = arr || [] // 利用闭包保存参数
+    const add = function (...params) {
+        args = [...args,...params]
+        if (params.length) {
+            return add
         } else {
-            return f.apply(this, args)
-        }
+            return args.reduce((prev, next) => prev + next, 0)
+        }  
     }
-    return f_curry
+    return add
 }
 ```
 测试下
 ```js
-sum(1)(2)() // 3
-sum(1)(2, 3)() // 6
-sum(1, 2, 3, 4)() // 10
+console.log(sum(1)(2)()) // 3
+console.log(sum(1)(2, 3)())// 6
+console.log(sum(1, 2, 3, 4)()) // 10
 ```
 
 #### 题解二
 题型二是以一个方法valueOf来结束收集。那也就是结束收集参数的条件很明白的告诉我们了：**执行valueOf方法时结束收集参数**。
-```js{7,8,9}
-function createCurry (f, arr) {
-    let args = arr || []
-    const f_curry = function (...params) {
-        args = args.concat(params)
-        return createCurry.call(this, f, args)
+```js
+function sum (...arr) {
+    let args = arr || [] // 利用闭包保存参数
+    const add = function (...params) {
+        args = [...args,...params]
+        return add
     }
-    f_curry.valueOf = function () {
-        return f.apply(this, args)
+    add.valueOf = function () {
+        return args.reduce((prev, next) => prev + next, 0)
     }
-    return f_curry
+    return add
 }
 ```
 测试下
 ```js
-sum(1)(2).valueOf() // 3
-sum(1)(2, 3).valueOf() // 6
-sum(1, 2, 3, 4).valueOf() // 10
+console.log(sum(1)(2).valueOf()) // 3
+console.log(sum(1)(2, 3).valueOf())// 6
+console.log(sum(1, 2, 3, 4).valueOf()) // 10
 ...
 ```
 
-
+#### 题解三
+题型三比较特殊，没有明显的结束收集的标志。其实是利用了js执行console.log时会默认调用toString方法的原理，重写函数的toString方法，这样就可以输出我们想要的结果。
+```js
+function sum (...arr) {
+    let args = arr || []
+    const add = function (...params) {
+        args = [...args,...params]
+        return add
+    }
+    add.toString = function () {
+        return args.reduce((prev, next) => prev + next, 0)
+    }
+    return add
+}
+```
+测试下
+```js
+console.log(sum(1)(2).valueOf()) // f 3
+console.log(sum(1)(2, 3).valueOf())// f 6
+console.log(sum(1, 2, 3, 4).valueOf()) // f 10
+...
+```
+<!-- // TODO f的意思 -->
+这里要注意下，正是因为是利用了console.log会触发toString方法这一点，因此，如果不在console.log里执行sum，则不会打印出结果
+```js
+function sum (...arr) {
+    let args = arr || []
+    const add = function (...params) {
+        args = [...args,...params]
+        return add
+    }
+    add.toString = function () {
+        const res = args.reduce((prev, next) => prev + next, 0)
+        console.log(res) // 在此处打印
+        return res
+    }
+    return add
+}
+// 测试——不使用console.log
+sum(1)(2) 
+sum(1)(2, 3)
+sum(1, 2, 3, 4)
+```
+则以上都不会有结果，因为没有console.log触发toString方法，toString方法里的内容不会被执行。
 
 
 
