--- a/docs/pages/other/草-组件开发.md
+++ b/docs/pages/other/草-组件开发.md
@@ -1,3 +1,8 @@
+### 为什么要规范组件开发
+* 视觉设计师没有一个整体规范，每次给的设计稿在某些相同的组件上可能不太一样，包括组件啊、颜色风格、和iconfont风格
+* 这样每次视觉得重新设计、开发得重新写、最终设计得重新走查，浪费大量时间
+* 每次领导觉得这儿不太好就改下这，这样由于没有一个规范，纯凭个人当时的喜好来决定，导致可能一个地方被改了几次，也并没有什么很明显的提升，甚至改回了原来的样子
+
 ### 细化程度
 * 哪个部分要抽成独立的，哪个部分不用，需要根据业务考量
 （比如modal里的header、footer需要在其他地方用到，就可以都单独抽出来，里面的内容用slot插槽）
@@ -55,3 +60,22 @@ export default {
 相关
 * https://juejin.im/post/5d566e82f265da03f77e653c#heading-10
 
+### VerifyInput
+* 结合el-input和错误提示
+* 通过value和input实现v-model
+* 通过$listeners和$attrs实现属性和事件的透传，保证可以使用功能el-input的其他属性和方法
+* 在外部对value进行校验
+
+### Modal
+* 组合Mask、header和footer-btn，通过slot来添加内容
+* header、footer均可以没有，因此需要实现上中下自适应布局（上下固定，中部自适应，且上下都可以没有），通过flex实现，只要将flex-direction设为column
+* 区分开关闭和cancel
+* 通过$listeners和$attrs实现属性和事件的透传，保证底部按钮的方法被直接使用
+
+### iconfont
+* 规范iconfont，不要每次都传新的，这样导致iconfont重复，且风格很多不一样
+* 一些基础的iconfont，不要以业务使用场景命名，而是应该以iconfont本身的特性命名。比如问号，就应该叫问号，而不是根据业务场景叫“名称提示”之类的文案
+### 其他 
+* 生成了一份简单的使用文档，对入职的新实习生，会首先看下各基础组件
+* 已有组件，必须用组件
+* 设计师不用再每次设计按钮、弹框、提示框，开发不用每次重复写样式
