--- a/docs/pages/ algorithm/二叉树/112、113-路径总和.md
+++ b/docs/pages/ algorithm/二叉树/112、113-路径总和.md
@@ -33,3 +33,26 @@ function _pathSum (root, sum, res, path) {
     _pathSum(root.right, sum-root.val, res, path)
 }
 ```
+
+```js
+//  回溯法
+var pathSum = function(root, sum) {
+    if (root === null) return []
+    let res = []
+    let path = []
+    _pathSum(root, sum, res, path)
+    return res
+    
+};
+function _pathSum (root, sum, res, path) {
+    if (root === null) return
+    path.push(root.val)
+    if (!root.left && !root.right && root.val === sum) {
+        res.push([...path])
+        //return
+    }
+    _pathSum(root.left, sum-root.val, res, path)
+    _pathSum(root.right, sum-root.val, res, path)
+    path.pop()
+}
+```
