--- a/docs/pages/ algorithm/回溯/46-全排列.md
+++ b/docs/pages/ algorithm/回溯/46-全排列.md
@@ -2,6 +2,7 @@
 [视频讲解](https://leetcode-cn.com/problems/permutations/solution/quan-pai-lie-by-leetcode-solution-2/)
 
 ```js
+// 利用used来记录已经使用过的
 var permute = function(nums) {
     if(nums.length === 0) return []
     let res = []
@@ -24,6 +25,31 @@ function dfs(nums, depth, path, used, res) {
             dfs(nums, depth+1, path, used, res)
             path.pop()
             used[i] = false
+        }
+   } 
+}
+```
+
+```js
+// 更加普适的解法
+var permute = function(nums) {
+    if(nums.length === 0) return []
+    let res = []
+    let path = []
+    dfs(nums, path, res)
+    return res
+};
+function dfs(nums, path, res) {
+   let length = nums.length
+   if (length === path.length) {
+        res.push([...path])
+       return
+   }
+   for (let i = 0; i< length; i++) {
+        if (path.indexOf(nums[i]) <= -1) {
+            path.push(nums[i])
+            dfs(nums, path, res)
+            path.pop()
         }
    } 
 }
