--- a/docs/pages/frontEnd/js基础/柯里化.md
+++ b/docs/pages/frontEnd/js基础/柯里化.md
@@ -47,8 +47,8 @@ checkByRegExp(/^(\w)+(\.\w+)*@(\w)+((\.\w+)+)$/, 'test@gmail.com'); // 校验邮
 也就是即使是校验同一类型的值时，我们还要将正则表达式每次都重复一遍，有没有什么办法可以偷懒呢？
 ```js
 const checkByRegExp_curry = createCurry(checkByRegExp)
-const checkPhone = checkByRegExp_curry(/^1\d{10}$)
-const checkPhone = checkByRegExp_curry(/^(\w)+(\.\w+)*@(\w)+((\.\w+)+)$/)
+const checkPhone = checkByRegExp_curry(/^1\d{10}$/)
+const checkEmail = checkByRegExp_curry(/^(\w)+(\.\w+)*@(\w)+((\.\w+)+)$/)
 
 checkCellPhone('18642838455'); // 校验电话号码
 checkCellPhone('13109840560'); // 校验电话号码
