简单整理下算法题

--- a/docs/pages/algorithm/二叉树/104-二叉树的最大深度.md
+++ b/docs/pages/algorithm/二叉树/104-二叉树的最大深度.md
@@ -1,6 +1,6 @@
 [104-二叉树的最大深度](https://leetcode-cn.com/problems/maximum-depth-of-binary-tree/)
 
-
+#### 方案一：递归
 ```js
 // 递归方案
 var maxDepth = function(root) {
@@ -10,7 +10,7 @@ var maxDepth = function(root) {
     return Math.max(leftDepth, rightDepth) + 1  
 };
 ```
-
+#### 方案一：层序遍历方案
 ```js
 // 层序遍历的方案
 var maxDepth = function(root) {
