--- a/docs/pages/algorithm/二叉树/113-路径总和2.md
+++ b/docs/pages/algorithm/二叉树/113-路径总和2.md
@@ -1,17 +1,5 @@
-[112-路径总和](https://leetcode-cn.com/problems/path-sum/)
-
-```js
-var hasPathSum = function(root, sum) {
-    // 此题当树为空且sum为0时，要返回false，因此不能用root===null && sum===0的方法判断
-    if (root === null) return false
-    if (!root.left && !root.right && root.val === sum) return true
-    return hasPathSum(root.left, sum-root.val) || hasPathSum(root.right, sum-root.val)
-    
-};
-```
-
-
 [113-路径总和 II](https://leetcode-cn.com/problems/path-sum-ii/)
+#### 方案一
 ```js
 var pathSum = function(root, sum) {
     if (root === null) return []
@@ -33,7 +21,7 @@ function _pathSum (root, sum, res, path) {
     _pathSum(root.right, sum-root.val, res, path)
 }
 ```
-
+#### 方案二：回溯
 ```js
 //  回溯法
 var pathSum = function(root, sum) {
@@ -49,7 +37,6 @@ function _pathSum (root, sum, res, path) {
     path.push(root.val)
     if (!root.left && !root.right && root.val === sum) {
         res.push([...path])
-        //return
     }
     _pathSum(root.left, sum-root.val, res, path)
     _pathSum(root.right, sum-root.val, res, path)
