--- a/docs/pages/algorithm/二叉树/144-前序遍历.md
+++ b/docs/pages/algorithm/二叉树/144-前序遍历.md
@@ -1,8 +1,7 @@
 [144-二叉树的前序遍历](https://leetcode-cn.com/problems/binary-tree-preorder-traversal/)
 
-## 题解
-
 ### 代码
+#### 方案一：递归
 ```js
 // 递归方案
 var preorderTraversal = function(root) {
@@ -17,6 +16,7 @@ var preorderTraversal = function(root) {
     return list
 };
 ```
+#### 方案一：迭代
 ```js
 // 迭代方案
 var preorderTraversal = function(root) {
@@ -34,12 +34,9 @@ var preorderTraversal = function(root) {
 }
 ```
 
-### 思路分析
-略
 
 ### 复杂度分析
 #### 时间复杂度
 ![](https://tva1.sinaimg.cn/large/00831rSTgy1gdeha6bb7zj30vq0g6ac8.jpg)
 不管哪种遍历，从图中可以看出，
 每个节点最多会被访问两次，所以遍历操作的时间复杂度，跟节点的个数 n 成正比，也就是说二叉树遍历的时间复杂度是 O(n)。
-#### 空间复杂度
