--- a/docs/pages/algorithm/二叉树/94-中序遍历.md
+++ b/docs/pages/algorithm/二叉树/94-中序遍历.md
@@ -1,8 +1,7 @@
 [94-二叉树的中序遍历](https://leetcode-cn.com/problems/binary-tree-inorder-traversal/)
 
-## 题解
-
 ### 代码
+#### 方案一：递归
 ```js
 // 递归方案
 var inorderTraversal = function(root) {
@@ -18,6 +17,7 @@ var inorderTraversal = function(root) {
     
 };
 ```
+#### 方案一：迭代
 ```js
 // 迭代方案
 var inorderTraversal = function(root) {
@@ -42,6 +42,3 @@ var inorderTraversal = function(root) {
 * 每遍历一个节点，就沿着树把左节点全部入栈，直到cur为null；然后逐个pop，pop的节点为node，node即为此时目标节点，push至list，并将cur设为node.right，重复上述步骤
 
 * 注意，结束条件是`stack.length || cur !== null`，当stack为空时，弹出的最后一个node可能还有right，因此需要结合`stack.length`和`cur !== null`
-### 复杂度分析
-#### 时间复杂度
-#### 空间复杂度
