--- a/docs/pages/algorithm/动态规划/121-买卖股票的最佳时机.md
+++ b/docs/pages/algorithm/动态规划/121-买卖股票的最佳时机.md
@@ -1,5 +1,6 @@
 [121-买卖股票的最佳时机](https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/)
-方案一：
+
+#### 方案一：暴力循环
 ```js
 // 暴力循环
 var maxProfit = function(prices) {
@@ -17,7 +18,7 @@ var maxProfit = function(prices) {
 };
 ```
 
-方案二：假设自己在最低的一天买进，在最高的一天卖出，此时利润就是最大的
+#### 方案二：假设自己在最低的一天买进，在最高的一天卖出，此时利润就是最大的
 ```js
 var maxProfit = function(prices) {
     let length = prices.length
