--- a/docs/pages/algorithm/动态规划/70-爬楼梯.md
+++ b/docs/pages/algorithm/动态规划/70-爬楼梯.md
@@ -1,9 +1,8 @@
 
 [70-爬楼梯](https://leetcode-cn.com/problems/climbing-stairs/)
 
-## 题解
-
 ### 代码
+#### 方案一：递归+备忘录
 ```js
 // 递归+备忘录
 let map = {}
@@ -18,7 +17,7 @@ var climbStairs = function(n) {
     
 };
 ```
-
+#### 方案二：动态规划（dp table）
 ```js
 var climbStairs = function(n) {
     // 动态规划（dp table）
@@ -34,7 +33,7 @@ var climbStairs = function(n) {
 };
 ```
 
-
+#### 方案三：动态规划方案优化
 ```js
 var climbStairs = function(n) {
     // 动态规划（dp table的基础上优化）
