--- a/docs/pages/algorithm/回溯/46-全排列.md
+++ b/docs/pages/algorithm/回溯/46-全排列.md
@@ -1,6 +1,7 @@
 [46-全排列](https://leetcode-cn.com/problems/permutations/)
-[视频讲解](https://leetcode-cn.com/problems/permutations/solution/quan-pai-lie-by-leetcode-solution-2/)
 
+
+#### 方案一：参考[视频讲解](https://leetcode-cn.com/problems/permutations/solution/quan-pai-lie-by-leetcode-solution-2/)
 ```js
 // 利用used来记录已经使用过的
 var permute = function(nums) {
@@ -29,7 +30,7 @@ function dfs(nums, depth, path, used, res) {
    } 
 }
 ```
-
+#### 方案二：普通回溯解法
 ```js
 // 更加普适的解法
 var permute = function(nums) {
