--- a/docs/pages/algorithm/回溯/77-组合.md
+++ b/docs/pages/algorithm/回溯/77-组合.md
@@ -1,4 +1,5 @@
-参考全排列的解法
+[77-组合](https://leetcode-cn.com/problems/combinations/)
+#### 方案一：参考[全排列的解法](./46-全排列.md)
 ```js
 var combine = function(n, k) {
     if (n <= 0) return []
@@ -25,9 +26,9 @@ function dfs (n, k, depth, path, res, used) {
     }
 }
 ```
-
-
 由于此题的特殊性，可以直接在循环条件上进行剪枝，也就是直接改变循环的其实条件start，这样就不需要条件`!used[i] && i > (path[path.length - 1] || 0`的检测了
+
+#### 方案二: 普通的回溯解法
 ```js
 var combine = function(n, k) {
     if (n <= 0) return []
