--- a/docs/pages/algorithm/链表/160-相交链表.md
+++ b/docs/pages/algorithm/链表/160-相交链表.md
@@ -1,3 +1,6 @@
+[160-相交链表](https://leetcode-cn.com/problems/intersection-of-two-linked-lists/)
+
+#### 方案一：嵌套循环
 ```js
 // 嵌套循环
 var getIntersectionNode = function(headA, headB) {
@@ -14,6 +17,8 @@ var getIntersectionNode = function(headA, headB) {
 };
 ```
 此方案要注意内层用temp来循环，不要改变headB.否则下次外层循环时，headB就不对了
+
+#### 方案二：设置已访问标志位
 ```js
 // 标志位
 var getIntersectionNode = function(headA, headB) {
@@ -28,9 +33,9 @@ var getIntersectionNode = function(headA, headB) {
     return null
 };
 ```
-
+#### 方案三：双指针
 ```js
-// 双指针发法
+// 双指针解法
 let p = headA
     let q = headB
     while (p !== q) {
@@ -39,8 +44,8 @@ let p = headA
     }
     return p
 ```
-
+此方案很妙，两个p和q两个指针的遍历次数相同，均为A非公共部分+B非公共部分+公共部分，所以有公共节点时一定会相遇，
+没有公共节点时则会在null处相遇，也就是公共部分为0。总体思路如下图：
 ![](https://tva1.sinaimg.cn/large/007S8ZIlgy1ge63es7mw8j31980qmdte.jpg)
-https://leetcode-cn.com/problems/intersection-of-two-linked-lists/solution/javascriptxiang-jiao-lian-biao-tu-jie-shuang-zhi-z/
-> 此方法很妙！两个p和q两个指针的遍历次数相同，均为A非公共部分+B非公共部分+公共部分，所以有公共节点时一定会相遇，
-没有公共节点时则会在null处相遇，也就是公共部分为0
+
+来源于[leetCode题解](https://leetcode-cn.com/problems/intersection-of-two-linked-lists/solution/javascriptxiang-jiao-lian-biao-tu-jie-shuang-zhi-z/)
