--- a/docs/pages/algorithm/链表/234-回文链表.md
+++ b/docs/pages/algorithm/链表/234-回文链表.md
@@ -41,9 +41,9 @@ var isPalindrome = function(head) {
 
 ### 思路分析
 * 先利用快慢指针找到中间节点，注意奇偶之分。
-奇数如1->2->3-4->3->2->1，找到节点4，结束条件是fast.next === null
-偶数如1->2->3->3->2->1，找到后一个3，结束条件是fast === null
-所以循环的条件是fast !== null && fast.next !== null
+奇数如1->2->3-4->3->2->1，找到节点4，结束条件是`fast.next === null`
+偶数如1->2->3->3->2->1，找到后一个3，结束条件是`fast === null`
+所以循环的条件是`fast !== null && fast.next !== null`
 
-* 反转前半部分，观察找到的中间节点slow，只要完成slow的前一个节点之间部分的反转即可，循环条件为cur !== slow
-* 对比两部分，对于奇数长度的链表，此时后半部分的开始节点是slow.next而不是slow，因此要往后移一步
+* 反转前半部分，观察找到的中间节点slow，只要完成slow的前一个节点之间部分的反转即可，循环条件为`cur !== slow`
+* 对比两部分，对于奇数长度的链表，此时后半部分的开始节点是`slow.next`而不是slow，因此要往后移一步
